--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: thunar-media-tags-plugin 0.1.0svn\n"
+"Project-Id-Version: thunar-media-tags-plugin 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-25 23:55+0100\n"
 "PO-Revision-Date: 2006-04-17 18:30+0100\n"
