--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-17  Jean-François Wauthy <pollux@xfce.org>
+
+	* cs.po: Update Czech translations
+
 2006-09-03  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Updated Polish translations
