--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* ca.po: Updated the Catalan translation by
+	Carles Muñoz Gorriz <carlesmu@internautas.org>
+
 2006-09-17  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Update Czech translations
