--- a/po/fr.po
+++ b/po/fr.po
@@ -1,4 +1,4 @@
-# French translation for thunar-media-tags-plugin.
+# French translation of the thunar-media-tags-plugin package.
 # Copyright (C) 2006 Jannis Pohlmann.
 # This file is distributed under the same license as the media-tags-plugin package.
 # Stephane Roy <sroy@j2n.net>, 2006.
