--- a/po/ca.po
+++ b/po/ca.po
@@ -9,14 +9,13 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.1svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2006-12-03 15:17+0100\n"
+"PO-Revision-Date: 2006-04-17 18:30+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
-"Language-Team: Catalan <catalanxfce-i18n@xfce.org>\n"
+"Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
 msgid "Title"
@@ -142,7 +141,7 @@ msgstr "Introduïu el títol de l'àlbum/gravació."
 
 #: ../thunar-plugin/audio-tags-page.c:394
 msgid "<b>Comment:</b>"
-msgstr "<b>Comentari:</b>"
+msgstr "<b>Comentari:</b> "
 
 #: ../thunar-plugin/audio-tags-page.c:401
 msgid "Enter your comments here."
@@ -194,9 +193,9 @@ msgid "%d:%d Minutes"
 msgstr "%d:%d minuts"
 
 #: ../thunar-plugin/audio-tags-page.c:1004
-#, c-format
+#, fuzzy, c-format
 msgid "%d KBit/s"
-msgstr "%d kbps"
+msgstr "%d KBit/s"
 
 #: ../thunar-plugin/audio-tags-page.c:1005
 #, c-format
@@ -213,18 +212,20 @@ msgstr "<b>Tamany:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr "<b>Tipus MIME:</b>"
+msgstr "<b>Tipus MIME</b>"
 
 # Coeficient/Velocitat/Ritme/Ràtio/Taxa?
 # Ràtio no hi és al diec.
 # El termcat recomana taxa
 #: ../thunar-plugin/audio-tags-page.c:1064
+#, fuzzy
 msgid "<b>Bitrate:</b>"
-msgstr "<b>Taxa de bits «bitrate»:</b>"
+msgstr "<b>Taxa de bits:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
+#, fuzzy
 msgid "<b>Samplerate:</b>"
-msgstr "<b>Taxa de la mostra «samplerate»:</b>"
+msgstr "<b>Taxa de mostra:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
@@ -232,4 +233,4 @@ msgstr "<b>Canals:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
-msgstr "<b>Durada:</b>"
+msgstr "<b>Durada</b>"
