--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-22	Jannis Pohlmann <jannis@xfce.org>
+
+	* thunar-plugin/audio-tags-page.c: Reduce year spin button 
+	  acceleration to 0.0 instead of 1.0. Fixes bug #2777.
+
 2007-01-20	Jannis Pohlmann <jannis@xfce.org>
 
 	* configure.in.in: Post-release version bump.
