--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-02  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed some typos and Changed the letter case in some strings
+
 2007-01-05  Amanpreet Singh Alam <aalam@users.sf.net>
 
 	* pa.po: Punjabi Translation added
