--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-02  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
+	* fr.po: Added the Albanian translation by
+	Besnik Bleta <besnik@programeshqip.org>
+
+2007-02-02  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
 	* fr.po: Fixed some typos and Changed the letter case in some strings
 
 2007-01-05  Amanpreet Singh Alam <aalam@users.sf.net>
