--- a/po/hu.po
+++ b/po/hu.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2006-07-25 10:51+0100\n"
-"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2007-05-06 09:32+0100\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -56,9 +56,7 @@ msgid "_Underscores"
 msgstr "_Aláhúzások"
 
 #: ../thunar-plugin/tag-renamer.c:248
-msgid ""
-"Activating this option will replace all spaces in the target filename with "
-"underscores."
+msgid "Activating this option will replace all spaces in the target filename with underscores."
 msgstr "E lehetőség a célfájl nevében aláhúzásra cseréli a szóközöket."
 
 #: ../thunar-plugin/tag-renamer.c:253
@@ -66,17 +64,17 @@ msgid "_Lowercase"
 msgstr "_kisbetű"
 
 #: ../thunar-plugin/tag-renamer.c:255
-msgid ""
-"If you activate this, the resulting filename will only contain lowercase "
-"letters."
+msgid "If you activate this, the resulting filename will only contain lowercase letters."
 msgstr "Használata esetén a fájl nevében nem lesz Nagybetű."
 
-#: ../thunar-plugin/tag-renamer.c:264 ../thunar-plugin/tag-renamer.c:702
+#: ../thunar-plugin/tag-renamer.c:264
+#: ../thunar-plugin/tag-renamer.c:702
 #: ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
 msgstr "Ismeretlen művész"
 
-#: ../thunar-plugin/tag-renamer.c:265 ../thunar-plugin/tag-renamer.c:750
+#: ../thunar-plugin/tag-renamer.c:265
+#: ../thunar-plugin/tag-renamer.c:750
 #: ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "Ismeretlen cím"
@@ -84,15 +82,15 @@ msgstr "Ismeretlen cím"
 #. Edit tags action
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit _Tags"
-msgstr "_Tag-ek szerkesztése"
+msgstr "_Tag-ok szerkesztése"
 
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit ID3/OGG tags of this file."
-msgstr "OGG/id3 tag-ek szerkesztése"
+msgstr "OGG/id3 tagok szerkesztése"
 
 #: ../thunar-plugin/tag-renamer.c:545
 msgid "Audio Tags"
-msgstr "Hang tag-ek."
+msgstr "Hang tag-ok"
 
 #: ../thunar-plugin/audio-tags-page.c:196
 msgid "Unknown Album"
@@ -161,7 +159,7 @@ msgstr "_Mentés"
 
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "Save audio tags."
-msgstr "Hang tag-ek mentése"
+msgstr "Hang tag-ok mentése"
 
 #. Create and add the info action
 #: ../thunar-plugin/audio-tags-page.c:461
@@ -228,3 +226,4 @@ msgstr "<b>Csatornák:</b>"
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
 msgstr "<b>Hossz:</b>"
+
