--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,18 +1,24 @@
+2007-06-13  Maximilian Schleiss <maximilian@xfce.org>
+
+	* it.po: Updated the translation
+	by Roberto Pariset <robdebian@gmail.com>
+	* *.po: Fixed headers
+
 2007-03-31	Pau Rul-lan Ferragut <paurullan@bulma.net>
 	
 	* gb.po: British translation by Jeff Bailes <thepizzaking@gmail.com>
 
-2007-02-20	Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-20	Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Modified the headers for the Albanian translation by
 	  Besnik Bleta <besnik@programeshqip.org>
 
-2007-02-02	Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-02	Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Added the Albanian translation by
 	Besnik Bleta <besnik@programeshqip.org>
 
-2007-02-02	Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-02	Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed some typos and Changed the letter case in some strings
 
@@ -26,7 +32,7 @@
 	* ca.po: Updated Catalan translation
 	  by Carles Muñoz Gorriz <carlesmu@ya.com>
 
-2006-12-11	Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-11	Maximilian Schleiss <maximilian@xfce.org>
 
 	* ca.po: Updated the Catalan translation by
 	  Carles Muñoz Gorriz <carlesmu@internautas.org>
@@ -50,7 +56,7 @@
 2006-07-20	Jean-François Wauthy <pollux@xfce.org>
 
 	* fr.po: Updated French translations by Maximilian Schleiss
-	  <maxschleiss@bluewin.ch>
+	  <maximilian@xfce.org>
 
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
