--- a/po/ca.po
+++ b/po/ca.po
@@ -1,7 +1,6 @@
-# Catalan translations for thunar-media-tags-plugin package.
-# Copyright (C) 2006 Jannis Pohlmann <jannis@xfce.org>
-# This file is distributed under the same license as the
-# thunar-media-tags-plugin package.
+# Catalan translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Carles Muñoz Gorriz <carlesmu@internautas.org>, 2006.
 #
 msgid ""
@@ -11,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-04-17 18:30+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
-"Language-Team: catalan\n"
+"Language-Team: catalan <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
