--- a/po/de.po
+++ b/po/de.po
@@ -1,5 +1,5 @@
-# German translations for the thunar-media-tags-plugin.
-# Copyright (C) 2006 Jannis Pohlmann <jannis@xfce.org>
+# German translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Jannis Pohlmann <jannis@xfce.org>, 2006.
 #
@@ -10,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-03-25 23:56+0100\n"
 "Last-Translator: Jannis Pohlmann <jannis@xfce.org>\n"
-"Language-Team: German <de@li.org>\n"
+"Language-Team: German <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
