--- a/po/el.po
+++ b/po/el.po
@@ -1,6 +1,6 @@
-# Greek translations for thunar-tag-renamer-plugin package.
-# Copyright (C) 2006 Jannis Pohlmann <jannis@xfce.org>
-# This file is distributed under the same license as the thunar-tag-renamer-plugin package.
+# Greek translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Stavros Giannouris <stavrosg@serverhive.com>, 2006.
 #
 msgid ""
@@ -10,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-04-06 20:20+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg@serverhive.com>\n"
-"Language-Team: Greek <nls@tux.hellug.gr>\n"
+"Language-Team: Greek <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
