--- a/po/fr.po
+++ b/po/fr.po
@@ -1,8 +1,8 @@
-# French translation of the thunar-media-tags-plugin package.
-# Copyright (C) 2006 Jannis Pohlmann.
-# This file is distributed under the same license as the media-tags-plugin package.
+# French translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Stephane Roy <sroy@j2n.net>, 2006.
-# Maximilian Schleiss <maxschleiss@bluewin.ch>, 2007.
+# Maximilian Schleiss <maximilian@xfce.org>, 2007.
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2007-01-29 00:41+0100\n"
-"Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
+"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
