--- a/po/gl.po
+++ b/po/gl.po
@@ -1,19 +1,19 @@
-# Galician translation for thunar-media-tags-plugin
-# Copyright (c) (c) 2006 Canonical Ltd, and Rosetta Contributors 2006
+# Galician translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2006.
+# Leandro Regueiro <leandro.regueiro@gmail.com>, 2006.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: thunar-media-tags-plugin\n"
+"Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 21:29+0200\n"
 "PO-Revision-Date: 2006-08-17 20:07+0000\n"
 "Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
-"Language-Team: Galician <gl@li.org>\n"
+"Language-Team: Galician <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
