--- a/po/ja.po
+++ b/po/ja.po
@@ -1,9 +1,6 @@
-# $Id$
-#
-# Japanese translations for thunar-media-tags-plugin package.
-# Copyright (C) 2006 Jannis Pohlmann.
-# This file is distributed under the same license as
-#   the thunar-media-tags-plugin package.
+# Japanese translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Daichi Kawahata <daichi@xfce.org>, 2006.
 #
 msgid ""
@@ -13,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-03-26 13:39+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
-"Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
+"Language-Team: Japanese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
