--- a/po/pl.po
+++ b/po/pl.po
@@ -1,7 +1,6 @@
-# Polish translations for thunar-media-tags-plugin package.
-# Copyright (C) 2006 Jannis Pohlmann.
-# This file is distributed under the same license as
-#   the thunar-media-tags-plugin package.
+# Polish translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Piotr Maliński <admin@rk.edu.pl>, 2006.
 #
 msgid ""
@@ -11,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-04-08 12:16+0900\n"
 "Last-Translator: Piotr Maliński <admin@rk.edu.pl>\n"
-"Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
+"Language-Team: Polish <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
