--- a/po/ru.po
+++ b/po/ru.po
@@ -1,7 +1,6 @@
-# Russian translation of thunar-media-tags-plugin.
-# Copyright (C) 2006 Jannis Pohlmann.
-# This file is distributed under the same license as
-#   the thunar-media-tags-plugin package.
+# Russian translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Andrey Fedoseev <andrey.fedoseev@gmail.com>, 2006.
 #
 msgid ""
@@ -11,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-04-09 16:27+0600\n"
 "Last-Translator: Andrey Fedoseev <andrey.fedoseev@gmail.com>\n"
-"Language-Team: Russian <ru@li.org>\n"
+"Language-Team: Russian <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
