--- a/po/sq.po
+++ b/po/sq.po
@@ -1,7 +1,8 @@
-# Albanian translation of thunar-media-tags-plugin package
-# Copyright (C) 2006 Jannis Pohlmann.
-# This file is distributed under the same license as the media-tags-plugin package.
+# Albanian translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Besnik Bleta <besnik@programeshqip.org>, 2007.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
@@ -9,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2007-01-30 21:06+0200\n"
 "Last-Translator: Besnik Bleta <besnik@programeshqip.org>\n"
-"Language-Team: Albanian <translation-team-sq@lists.sourceforge.net>\n"
+"Language-Team: Albanian <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 
