--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,7 +1,6 @@
-# Traditional Chinese translations for thunar-media-tags-plugin package.
-# Copyright (C) 2006 Jannis Pohlmann.
-# This file is distributed under the same license as
-#   the thunar-media-tags-plugin package.
+# Traditional Chinese translation of the thunar-media-tags-plugin.
+# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>, 2006.
 #
 msgid ""
@@ -11,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
 "PO-Revision-Date: 2006-04-06 01:06+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
-"Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
+"Language-Team: Chinese (traditional) <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
