--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,19 +1,25 @@
+2007-06-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_PT: European Portuguese translation added
+	by Nuno Miguel <nunis@netcabo.pt>
+
 2007-06-13  Maximilian Schleiss <maximilian@xfce.org>
 
 	* it.po: Updated the translation
 	by Roberto Pariset <robdebian@gmail.com>
 	* *.po: Fixed headers
 
-2007-03-31	Pau Rul-lan Ferragut <paurullan@bulma.net>
+2007-03-31  Pau Rul-lan Ferragut <paurullan@bulma.net>
 	
-	* gb.po: British translation by Jeff Bailes <thepizzaking@gmail.com>
+	* gb.po: British translation
+	by Jeff Bailes <thepizzaking@gmail.com>
 
-2007-02-20	Maximilian Schleiss <maximilian@xfce.org>
+2007-02-20  Maximilian Schleiss <maximilian@xfce.org>
 
-	* sq.po: Modified the headers for the Albanian translation by
-	  Besnik Bleta <besnik@programeshqip.org>
+	* sq.po: Modified the headers for the Albanian translation
+	by Besnik Bleta <besnik@programeshqip.org>
 
-2007-02-02	Maximilian Schleiss <maximilian@xfce.org>
+2007-02-02  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Added the Albanian translation by
 	Besnik Bleta <besnik@programeshqip.org>
