--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-28	Mike Massonnet <mmassonnet@xfce.org>
+
+	* pk.po: Add new translation by محمد علي المكي <makki.ma@gmail.com>
+
 2007-08-25  Mike Massonnet <mmassonnet@xfce.org>
 
 	* pt_PT.po: European Portuguese update
