--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-06  Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR.po: Added new Brazilian Portuguese translation
+    by Fábio Nogueira <deb-user-ba@ubuntu.com>
+    * LINGUAS: Added missing languages.
+
 2007-10-28	Mike Massonnet <mmassonnet@xfce.org>
 
 	* pk.po: Add new translation by محمد علي المكي <makki.ma@gmail.com>
