--- a/po/de.po
+++ b/po/de.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Jannis Pohlmann <jannis@xfce.org>, 2006.
+# Fabian Nowak <timystery@arcor.de>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2006-03-25 23:56+0100\n"
-"Last-Translator: Jannis Pohlmann <jannis@xfce.org>\n"
+"PO-Revision-Date: 2007-12-01 18:38+0000\n"
+"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -102,7 +103,7 @@ msgstr "<b>Stück:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:320
 msgid "Enter the track number here."
-msgstr "Hier die Stück eingeben."
+msgstr "Hier die Nummer eingeben."
 
 #: ../thunar-plugin/audio-tags-page.c:328
 msgid "<b>Year:</b>"
@@ -126,7 +127,7 @@ msgstr "<b>Titel:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:373
 msgid "Enter the song title here."
-msgstr "Hier den Titel des Liedes oder Dokumentes eingeben."
+msgstr "Hier den Titel des Lieds oder Dokuments eingeben."
 
 #: ../thunar-plugin/audio-tags-page.c:380
 msgid "<b>Album:</b>"
@@ -217,7 +218,7 @@ msgstr "<b>Bitrate:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
 msgid "<b>Samplerate:</b>"
-msgstr "<b>Samplerate:</b>"
+msgstr "<b>Abtastrate:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
