--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-30  Mike Massonnet <mmassonnet@xfce.org>
+
+	* ca.po: Update Catalan translation,
+	by Carles Muñoz Gorriz <carlesmu@ya.com>
+
 2007-12-03	Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: German translation update
